<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorContainerFragmentMyDevices"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/backgroundColor"
        tools:context=".view.fragment.MyDevicesFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayoutFragmentMyDevices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/collapsingToolbarLayoutMediumSize"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolbarFragmentMyDevices"
                    style="@style/Base.Widget.Material3.Toolbar"
                    app:layout_collapseMode="pin"
                    app:menu="@menu/home_toolbar_menu"
                    app:navigationIcon="@drawable/ic_round_menu_24"
                    app:title="@string/my_devices"
                    app:titleCentered="true" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textEmptyMyDeviceList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/emptyMyDeviceListError"
            android:textSize="14sp"
            android:visibility="gone" />

        <include
            android:id="@+id/layoutSearchNoResult"
            layout="@layout/layout_search_no_result" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewFragmentMyDevices"
            style="@style/Base.Widget.RecyclerView" />


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>