<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mainItem"
        android:title="@string/main">

        <menu>
            <item
                android:id="@+id/homeFragment"
                android:checkable="true"
                android:icon="@drawable/ic_outline_home_24"
                android:title="@string/home" />
            <item
                android:id="@+id/myDevicesFragment"
                android:checkable="true"
                android:icon="@drawable/ic_round_phone_android_24"
                android:title="@string/my_devices" />
            <item
                android:id="@+id/settingFragment"
                android:checkable="true"
                android:icon="@drawable/ic_outline_settings_24"
                android:title="@string/setting" />

        </menu>

    </item>

</menu>