...
    <string name="noResult">No results</string>
    <string name="price">Price</string>
    <string name="status">Status</string>
    <string name="os">OS</string>
    <string name="remove">Remove</string>

    <string name="successfullyAdded">It successfully added to your list</string>
    <string name="successfullyRemoved">It successfully removed from your list</string>
    <string name="chooseThemeMode">Choose theme mode</string>
    <string name="chooseTheme">Choose theme</string>
    
    <string-array name="theme_item">
        <item>Light</item>
        <item>Dark</item>
        <item>System default</item>
    </string-array>
</resources>
