<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearNoResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieNoResultAnimation"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/no_result" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textNoResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/noResult"
            android:textSize="18sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>


</layout>